datasets/dataset_txt/scrapy/scrapy_236.txt
lovezeropython commented on Dec 29, 2018
SyntaxError: invalid syntax
➜  Desktop python3 -V
Python 3.6.5 :: Anaconda, Inc.
➜  Desktop pip3 -V
pip 18.0 from /Users/songhao/anaconda3/lib/python3.6/site-packages/pip (python 3.6)
➜  Desktop
`➜ Desktop scrapy startproject scrapyuniversal
Traceback (most recent call last):
File "/Users/songhao/anaconda3/bin/scrapy", line 7, in
from scrapy.cmdline import execute
File "/Users/songhao/anaconda3/lib/python3.6/site-packages/scrapy/init.py", line 34, in
from scrapy.spiders import Spider
File "/Users/songhao/anaconda3/lib/python3.6/site-packages/scrapy/spiders/init.py", line 10, in
from scrapy.http import Request
File "/Users/songhao/anaconda3/lib/python3.6/site-packages/scrapy/http/init.py", line 10, in
from scrapy.http.request import Request
File "/Users/songhao/anaconda3/lib/python3.6/site-packages/scrapy/http/request/init.py", line 17
scrclass Request(object_ref):
^
SyntaxError: invalid syntax
`